--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.3",
     "winston": "^3.17.0"
   }
 }
